--- a/mouse-event/drag-div.html
+++ b/mouse-event/drag-div.html
@@ -43,18 +43,27 @@
         })
         window.addEventListener('mousemove', (e) => {
             if (isClicked) {
-                console.log(e);
+                const top = e.clientY < 0;
+                const left = e.clientX < 0;
+                const bottom = e.clientY > window.innerHeight;
+                const right = e.clientX > window.innerWidth;
+
                 moveX = e.clientX - clickX;
                 moveY = e.clientY - clickY;
                 div.style.transform = `translate(${moveX + endX}px,${moveY + endY}px)`
+                if (top || left || bottom || right) {
+                    isClicked = false;
+                    div.style.transform = `translate(${endX}px,${endY}px)`
+                }
             }
         })
         div.addEventListener('mouseup', () => {
-            isClicked = false;
-            endX = moveX + endX;
-            endY = moveY + endY;
-            console.log(moveX, moveY)
-            console.log(endX, endY);
+            if (isClicked) {
+                isClicked = false;
+                endX = moveX + endX;
+                endY = moveY + endY;
+            }
+
         })
 
 
