--- a/실습/socar/index.html
+++ b/실습/socar/index.html
@@ -264,7 +264,10 @@
         </figure>
         <p>쏘카 앱 다운로드</p>
     </section>
+
+    scrtip
     <script src="js/makeScrollContents.js"></script>
+    <script src="js/countUp.js"></script>
     <script src="js/index.js"></script>
 </body>
 
