--- a/실습/socar/index.html
+++ b/실습/socar/index.html
@@ -15,6 +15,26 @@
 </head>
 
 <body>
+
+    <div class="hamberger-click">
+        <nav class="hamberger-nav">
+            <div>
+                <a href="#">이용 안내</a>
+                <a href="#">요금 안내</a>
+                <a href="#">혜택 안내</a>
+                <a href="#">쏘카존 개설 신청</a>
+            </div>
+            <div>
+                <a href="#">쏘카의 서비스</a>
+                <a href="#">쏘카 비즈니스</a>
+                <a href="#">쏘카 플랜</a>
+            </div>
+            <div>
+                <a href="#">회사소개</a>
+                <a href="#">공고</a>
+            </div>
+        </nav>
+    </div>
     <header>
         <div class="header-inner">
             <h1>
@@ -265,7 +285,9 @@
         <p>쏘카 앱 다운로드</p>
     </section>
 
-    scrtip
+
+
+
     <script src="js/makeScrollContents.js"></script>
     <script src="js/countUp.js"></script>
     <script src="js/index.js"></script>
