--- a/실습/socar/index.html
+++ b/실습/socar/index.html
@@ -49,7 +49,7 @@
                     </g>
                 </svg>
             </h1>
-            <a href="#" class="hamberger active"><span class="hidden">메뉴</span></a>
+            <a href="#" class="hamberger"><span class="hidden">메뉴</span></a>
         </div>
         <div class="hamberger-click">
             <nav class="hamberger-nav">
